<resources>
    <string name="app_name">Grappbox</string>
    <string name="progress_loading">Loading</string>
    <string name="logo_description">Grappbox logo</string>
    <string name="login_label">Login</string>
    <string name="login_hint">Enter your login</string>
    <string name="login_progress_label">Connexion</string>
    <string name="password_label">password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_connect_button">Connexion</string>
    <string name="login_error">Your login or password is incorrect</string>
    <string name="password_error">The password you enter is incorrect</string>
    <string name="login_error_return_button">Return</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="team_occupation_title">Team occupation</string>
    <string name="next_meeting_title">Next meeting</string>
    <string name="image_profile">image profil</string>
    <string name="username_label">Name :</string>
    <string name="occupation_project_label">Project :</string>
    <string name="occupation_state_label">State :</string>
    <string name="catefory_profile_user">User information</string>
    <string name="catefory_profile_user_security">User security</string>
    <string name="list_whiteboard">List whiteboard</string>
    <string name="add_whiteboard_label">Create new whiteboard</string>
    <string name="delete_whiteboard_label">Delete whiteboard</string>
    <string name="delete_confirm_whiteboard_label">Are you sure you want to delete</string>
    <string name="data_not_specified">Not specified</string>
    <string name="dialog_color_select">Color selection</string>
    <string name="italic_checkbox_label"><i>Italic</i></string>
    <string name="bold_checkbox_label"><b>Bold</b></string>
    <string name="underline_checkbox_label"><u>Underline</u></string>
    <string name="positive_response">OK</string>
    <string name="negative_response">Cancel</string>
    <string name="confirm_response">Confirm</string>
    <string-array name="list_global_progress">
        <item>project_id</item>
        <item>project_name</item>
        <item>project_description</item>
        <item>project_phone</item>
        <item>project_company</item>
        <item>project_logo</item>
        <item>contact_mail</item>
        <item>facebook</item>
        <item>twitter</item>
        <item>number_finished_tasks</item>
        <item>number_ongoing_tasks</item>
        <item>number_tasks</item>
        <item>number_bugs</item>
        <item>number_messages</item>
    </string-array>
    <string name="meeting_hour_label">Hour</string>
    <string name="meeting_date_label">Date</string>
    <string name="meeting_date_begin_label">Date begin</string>
    <string name="meeting_date_end_label">Date end</string>
    <string-array name="size_text">
        <item>14</item>
        <item>18</item>
        <item>22</item>
    </string-array>
    <string-array name="size_brush">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="dashboard_tab_bar_title">
        <item>Team Occupation</item>
        <item>Next Meeting</item>
        <item>Global Progress</item>
    </string-array>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_name_label">User name:</string>
    <string name="str_current_password_label">Current Password:</string>
    <string name="str_current_password_hint">Your password</string>
    <string name="str_new_password_hint">Your new password</string>
    <string name="str_confirm_new_password_hint">Confirm your new password</string>
    <string name="change_password_title">Change password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="filetype">filetype</string>
    <string name="filename">Filename</string>
    <string name="safe_password_question">Enter the Safe password</string>
    <string name="cloudexplorer_addpanel_title">Add new</string>
    <string name="str_new_directory">New directory</string>
    <string name="string_createdir">Create Folder</string>
    <string name="str_import">Import file</string>
    <string name="str_import_secure">Import secured file</string>
    <string name="str_error">Error</string>
    <string name="problem_grappbox_server">We can\'t arrive to deal with grappbox server, please try again. If the problem persist, contact grappbox team at problem@grappbox.com</string>
    <string name="placeholder_create_folder">Enter the folder name here…</string>
    <string name="placeholder_safe_password">Enter the safe password here…</string>
    <string name="error_folder_incorrect_characters">The folder name have some incorrect characters (/)</string>
    <string name="error_code_head">"\nError code : "</string>
    <string name="cloudexplorer_filepassword">Enter the file password here…</string>
    <string name="set_file_password">Set the file password</string>
    <string name="cloud_file_import_notification">File importation in progress</string>
    <string name="cloudexplorer_import_pending_text">Prepare the system for uploading</string>
    <string name="cloudexplorer_import">We are importing your file, please wait</string>
    <string-array name="event_types_list_default">
        <item>Nothing</item>
        <item>New type</item>
    </string-array>
    <string name="event_header">Event</string>
    <string name="event_title">Title</string>
    <string name="event_title_hint">Title event</string>
    <string name="event_description">Description</string>
    <string name="event_description_hint">Event description</string>
    <string name="event_begin_date">Begin date:</string>
    <string name="event_type_label">Event type</string>
    <string name="event_begin_date_hint">Event begin date</string>
    <string name="event_end_date">End date:</string>
    <string name="event_end_date_hint">Event end date</string>
    <string name="event_button_update">Update event information</string>
    <string name="event_button_add_user">Add user</string>
    <string name="event_add_user_mail_label">User mail:</string>
    <string name="event_add_user_mail_hint">User mail</string>
    <string name="event_delete_title_label">Are you sure you want to delete this event ?</string>
    <string name="event_progres_label">Loading</string>
    <string name="no_proj_selected_str">No project selected</string>
    <string name="str_project_settings">Manage project settings</string>
    <string name="str_project_create">Create project</string>
    <string name="str_modif_project_settings">Modify project settings</string>
    <string name="title_activity_project_settings">Project Settings</string>
    <string name="str_project_settings_title">Project Settings</string>
    <string name="str_create_project_title">Create Project</string>
    <string name="str_project_settings_footer">" Settings"</string>
    <string name="str_placeholder_project_name">Enter project name here...</string>
    <string name="str_project_name">Project Name</string>
    <string name="str_project_desc">Project description</string>
    <string name="str_placeholder_project_desc">Enter your project description here...</string>
    <string name="str_placeholder_project_phone">Enter the project contact phone here...</string>
    <string name="str_project_phone">Project contact phone</string>
    <string name="str_project_company_name">Enter the company name here...</string>
    <string name="str_company_name">Company name</string>
    <string name="str_placeholder_project_contact_mail">Enter the project\'s contact mail</string>
    <string name="str_project_contact_mail">Contact E-Mail address</string>
    <string name="str_placeholder_facebook_url">Enter the project\'s facebook page URL here...</string>
    <string name="str_placeholder_twitter_url">Enter the project\'s twitter profile url here...</string>
    <string name="str_project_facebook_url">Facebook page</string>
    <string name="str_project_twitter_url">Twitter page</string>
    <string name="str_project_logo">Change the project\'s logo</string>
    <string name="str_project_basic_info">Basic informations</string>
    <string name="str_project_safe_password">Change your project\'s safe password</string>
    <string name="str_password_confirm_label">Confirm password:</string>
    <string name="str_new_password_label">New password:</string>
    <string name="str_retreive_explaination">You can retreive the project during 7 days after deletion</string>
    <string name="str_project_delete">Delete the project</string>
    <string name="project_create_title">Project creation</string>
    <string name="project_create_title_hint">Your project title</string>
    <string name="project_create_description">Description</string>
    <string name="project_create_description_hint">Your project description</string>
    <string name="project_create_phone">Phone</string>
    <string name="project_create_company">Company</string>
    <string name="project_create_company_hint">Company name</string>
    <string name="project_create_mail">Mail</string>
    <string name="project_create_mail_hint">example@mail.com</string>
    <string name="project_create_facebook_link">Facebook</string>
    <string name="project_create_twitter_link">Twitter</string>
    <string name="project_create_safe_passeword">Safe passeword project</string>
    <string name="project_create_safe_passeword_hint">Your safe passeword</string>
    <string name="project_create_send">Create</string>
</resources>