<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/str_project_basic_info">
        <EditTextPreference
            android:inputType="text"
            android:key="project_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_project_name" />

        <EditTextPreference
            android:inputType="text"
            android:key="project_desc"
            android:singleLine="false"
            android:title="@string/str_project_desc" />

        <EditTextPreference
            android:inputType="phone"
            android:key="project_phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_project_phone" />

        <EditTextPreference
            android:inputType="text"
            android:key="project_company_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_company_name" />

        <EditTextPreference
            android:inputType="textEmailAddress"
            android:key="project_contact_mail"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_project_contact_mail" />

        <EditTextPreference
            android:inputType="textUri"
            android:key="project_facebook_url"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_project_facebook_url" />

        <EditTextPreference
            android:inputType="textUri"
            android:key="project_twitter_url"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/str_project_twitter_url" />

        <Preference
            android:key="project_logo"
            android:title="@string/str_project_logo"
            android:icon="@mipmap/icon_launcher"/>
    </PreferenceCategory>

</PreferenceScreen>
