<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.grappbox.grappbox.grappbox.Project.CreateProjectActivity"
        tools:showIn="@layout/activity_create_project">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_title"
            android:textSize="30sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="#c0392b"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_name_label"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_title"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_title_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_description"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_description_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_phone"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="XXXXXXXXXX"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_mail"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_mail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_mail_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_company"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_company_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_facebook_link"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_facebook_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_twitter_link"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_twitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_twitter_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_create_safe_passeword"
            android:textSize="20sp"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textColor="#000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_project_safe_passeword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:hint="@string/project_create_safe_passeword_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/create_project_send_button"
            android:text="@string/project_create_send"
            android:onClick="sendCreateProject"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>