<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_add_user_mail_label"
        android:textSize="20sp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:textColor="#000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/event_user_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/event_add_user_mail_hint"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/event_confirm_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_button_add_user"/>

        <Button
            android:id="@+id/event_cancel_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative_response"/>

    </LinearLayout>

</LinearLayout>